# apparatus

./: .gitignore  Cargo.toml  LICENSE  README.md  work.org
src/: buf.rs  cli.rs  cli_header.rs  error.rs  logging.rs  main.rs  pe.rs  utils.rs
src/cli/: blobs.rs  constants.rs  guids.rs  header.rs  il.rs  logical_tables.rs  mod.rs  strings.rs  token.rs  user_strings.rs
subject/: Program.cs
