[package]
name = "aps"
version = "0.1.0"
edition = "2018"
publish = false
authors = ["Denys Mentiei <endden@gmail.com>"]
repository = "https://github.com/den-mentiei/apparatus"
description = "A learning attempt to write Common Intermediate Language (CIL) virtual machine."
readme = "README.md"
license-file = "LICENSE"

[dependencies]
